Fix tiny spacing issue on ultra-mobile screens for hero title

--- a/styles.css
+++ b/styles.css
@@ -1169,7 +1169,7 @@ section {
 
     /* Home */
     .home {
-        padding-top: 10rem;
+        padding-top: 24rem;
     }
 
     .home-img img {
